--- a/accueil.html
+++ b/accueil.html
@@ -5,12 +5,116 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="title" content="Oh my Food"/>
 		<title>Oh my Food</title>
-		<link rel="stylesheet" href="CSS/styleheader.css"/>
-		<link rel="stylesheet" href="CSS/stylemain.css"/>
-		<link rel="stylesheet" href="CSS/stylefooter.css"/>
 		<link rel="preconnect" href="https://fonts.gstatic.com"/>
-		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;600;700&display=swap" rel="stylesheet"/>
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&family=Shrikhand&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous"/>
 	</head>
 	<body>
+		<header class="header">
+			<h1>OHMYFOOD</h1>
+		</header>
+		<main>
+		<!-- Section localisation-->
+			<section class="localisation">
+				<i class="fas fa-map-marker-alt"></i>
+					<span class="localisationtext">Paris, Belleville</span>
+			</section>
+		<!-- Section explore-->
+			<section class="explore">
+				<h2 class="exploretitle">Réservez le menu qui vous convient</h2>
+					<p class="exploretext">Découvrez des restaurants d'exception séléctionnés par nos soins.</p>
+					<button class="explorebutton">Explorer nos restaurants</button>
+			</section>
+		<!-- Section fonctionnement-->
+			<section class="fonctionnement">
+				<h2 class="fonctionnementtitle">Fonctionnement</h2>
+					<ol class="fonctionnementetapes">
+						<li class="fonctionnementcarte">
+							<i class="fas fa-mobile-alt"></i>
+							<span class="fonctionnementtexte">Choisissez un restaurant</span>
+						</li>
+						<li class="fonctionnementcarte">
+							<i class="fas fa-list-ul"></i>
+							<span class="fonctionnementtexte">Composez votre menu</span>
+						</li>
+						<li class="fonctionnementcarte">
+							<i class="fas fa-store"></i>
+							<span class="fonctionnementtexte">Choisissez un restaurant</span>
+						</li>
+					</ol>
+			</section>
+		<!-- Section restaurants-->
+			<section class="restaurants">
+				<div class="restaurantcartes">
+					<a class="carte" href="#">
+						<header class="carteheader">
+							<img src="Maquettes Ohmyfood/images/restaurants/lapalettedugout.jpg" alt class="carteimage">
+								<span class="restaurantlegend">Nouveau</span>
+						</header>
+						<footer>
+							<h3 class="restauranttitle">La palette du goût</h3>
+								<span class="restaurantquartier">Ménilmontant</span>
+									<i class="far fa-heart"></i>
+						</footer>
+					</a>
+				</div>
+				<div class="restaurantcartes">
+					<a class="carte" href="#">
+						<header class="carteheader">
+							<img src="Maquettes Ohmyfood/images/restaurants/lanoteenchantee.jpg" alt class="carteimage">
+								<span class="restaurantlegend">Nouveau</span>
+								<i class="far fa-heart"></i>
+						</header>
+						<footer>
+							<h3 class="restauranttitle">La note enchantée</h3>
+								<span class="restaurantquartier">Charonne</span>
+									<i class="far fa-heart"></i>
+						</footer>
+					</a>
+				</div>
+				<div class="restaurantcartes">
+					<a class="carte" href="#">
+						<header class="carteheader">
+							<img src="Maquettes Ohmyfood/images/restaurants/alafrancaise.jpg" alt class="carteimage">
+								<span class="restaurantlegend">Nouveau</span>
+									<i class="far fa-heart"></i>
+						</header>
+						<footer>
+							<h3 class="restauranttitle">A la française</h3>
+								<span class="restaurantquartier">Cité rouge></span>
+									<i class="far fa-heart"></i>
+						</footer>
+					</a>
+				</div>
+				<div class="restaurantcartes">
+					<a class="carte" href="#">
+						<header class="carteheader">
+							<img src="Maquettes Ohmyfood/images/restaurants/ledelicedessens.jpg" alt class="carteimage">
+								<span class="restaurantlegend">Nouveau</span>
+						</header>
+						<footer>
+							<h3 class="restauranttitle">Le délice des sens></h3>
+								<span class="restaurantquartier">Folie Méricourt</span>
+						</footer>
+					</a>
+				</div>
+			</section>
+		</main>
+		<footer class="footer">
+			<h3>Ohmyfood</h3>
+			<ul>
+				<li class="footerlist">
+					<i class="fas fa-utensils">Proposer un restaurant</i>
+				</li>
+				<li class="footerlist">
+					<i class="fas fa-hands-helping">Devenir partenaire</i>
+				</li>
+				<li class="footerlist">Mentions légales
+				</li>
+				<li class="footerlist">Contact
+				</li>
+			</ul>
+		</footer>
     </body>
