correction erreurs html

--- a/accueil.html
+++ b/accueil.html
@@ -65,7 +65,6 @@
 						<header class="carteheader">
 							<img src="Maquettes Ohmyfood/images/restaurants/lanoteenchantee.jpg" alt class="carteimage">
 								<span class="restaurantlegend">Nouveau</span>
-								<i class="far fa-heart"></i>
 						</header>
 						<footer>
 							<h3 class="restauranttitle">La note enchantée</h3>
@@ -79,11 +78,10 @@
 						<header class="carteheader">
 							<img src="Maquettes Ohmyfood/images/restaurants/alafrancaise.jpg" alt class="carteimage">
 								<span class="restaurantlegend">Nouveau</span>
-									<i class="far fa-heart"></i>
 						</header>
 						<footer>
 							<h3 class="restauranttitle">A la française</h3>
-								<span class="restaurantquartier">Cité rouge></span>
+								<span class="restaurantquartier">Cité rouge</span>
 									<i class="far fa-heart"></i>
 						</footer>
 					</a>
@@ -95,8 +93,9 @@
 								<span class="restaurantlegend">Nouveau</span>
 						</header>
 						<footer>
-							<h3 class="restauranttitle">Le délice des sens></h3>
+							<h3 class="restauranttitle">Le délice des sens</h3>
 								<span class="restaurantquartier">Folie Méricourt</span>
+									<i class="far fa-heart"></i>
 						</footer>
 					</a>
 				</div>
