ajout des ancres vers liens des pages des differents restaurants

--- a/accueil.html
+++ b/accueil.html
@@ -10,6 +10,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&family=Shrikhand&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous"/>
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<header class="header">
@@ -48,7 +49,7 @@
 		<!-- Section restaurants-->
 			<section class="restaurants">
 				<div class="restaurantcartes">
-					<a class="carte" href="#">
+					<a class="carte" href="lapalettedugout.html">
 						<header class="carteheader">
 							<img src="Maquettes Ohmyfood/images/restaurants/lapalettedugout.jpg" alt class="carteimage">
 								<span class="restaurantlegend">Nouveau</span>
@@ -61,7 +62,7 @@
 					</a>
 				</div>
 				<div class="restaurantcartes">
-					<a class="carte" href="#">
+					<a class="carte" href="lanoteenchantee.html">
 						<header class="carteheader">
 							<img src="Maquettes Ohmyfood/images/restaurants/lanoteenchantee.jpg" alt class="carteimage">
 								<span class="restaurantlegend">Nouveau</span>
@@ -74,7 +75,7 @@
 					</a>
 				</div>
 				<div class="restaurantcartes">
-					<a class="carte" href="#">
+					<a class="carte" href="alafrancaise.html">
 						<header class="carteheader">
 							<img src="Maquettes Ohmyfood/images/restaurants/alafrancaise.jpg" alt class="carteimage">
 								<span class="restaurantlegend">Nouveau</span>
@@ -87,7 +88,7 @@
 					</a>
 				</div>
 				<div class="restaurantcartes">
-					<a class="carte" href="#">
+					<a class="carte" href="ledelicedesens.html">
 						<header class="carteheader">
 							<img src="Maquettes Ohmyfood/images/restaurants/ledelicedessens.jpg" alt class="carteimage">
 								<span class="restaurantlegend">Nouveau</span>
