ajout d'éléments basique html sur pages restaurants

--- a/accueil.html
+++ b/accueil.html
@@ -51,7 +51,7 @@
 				<div class="restaurantcartes">
 					<a class="carte" href="lapalettedugout.html">
 						<header class="carteheader">
-							<img src="Maquettes Ohmyfood/images/restaurants/lapalettedugout.jpg" alt class="carteimage">
+							<img src="Maquettes Ohmyfood/images/restaurants/lapalettedugout.jpg" alt class="carteimage"/>
 								<span class="restaurantlegend">Nouveau</span>
 						</header>
 						<footer>
@@ -64,7 +64,7 @@
 				<div class="restaurantcartes">
 					<a class="carte" href="lanoteenchantee.html">
 						<header class="carteheader">
-							<img src="Maquettes Ohmyfood/images/restaurants/lanoteenchantee.jpg" alt class="carteimage">
+							<img src="Maquettes Ohmyfood/images/restaurants/lanoteenchantee.jpg" alt class="carteimage"/>
 								<span class="restaurantlegend">Nouveau</span>
 						</header>
 						<footer>
@@ -77,7 +77,7 @@
 				<div class="restaurantcartes">
 					<a class="carte" href="alafrancaise.html">
 						<header class="carteheader">
-							<img src="Maquettes Ohmyfood/images/restaurants/alafrancaise.jpg" alt class="carteimage">
+							<img src="Maquettes Ohmyfood/images/restaurants/alafrancaise.jpg" alt class="carteimage"/>
 								<span class="restaurantlegend">Nouveau</span>
 						</header>
 						<footer>
@@ -90,7 +90,7 @@
 				<div class="restaurantcartes">
 					<a class="carte" href="ledelicedesens.html">
 						<header class="carteheader">
-							<img src="Maquettes Ohmyfood/images/restaurants/ledelicedessens.jpg" alt class="carteimage">
+							<img src="Maquettes Ohmyfood/images/restaurants/ledelicedessens.jpg" alt class="carteimage"/>
 								<span class="restaurantlegend">Nouveau</span>
 						</header>
 						<footer>
