--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -10,12 +10,75 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&family=Shrikhand&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous"/>
+        <link rel="stylesheet" href="style.css">
 	</head>
     <body>
 		<header class="header">
 			<h1>OHMYFOOD</h1>
 		</header>
 		<main>
+            <div class="background">
+                <img class="backgroundpicture" src="Maquettes Ohmyfood/images/restaurants/lapalettedugout.jpg">
+            </div>
+            <section class="menu">
+                <header class="menuheader">La palette du goût
+                    <i class="far fa-heart"></i>
+                </header>
+                <div class="entrées">
+                    <h2 class="entréetitle">ENTRÉES</h2>
+                        <div class="foodcard">
+                            <h3 class="foodcardtitle"></h3>
+                                <p class="foodcarddescription"></p>
+                                    <p class="foodcardprice"></p>
+                        </div>
+                        <div class="foodcard">
+                            <h3 class="foodcardtitle"></h3>
+                                <p class="foodcarddescription"></p>
+                                    <p class="foodcardprice"></p>
+                        </div>
+                        <div class="foodcard">
+                            <h3 class="foodcardtitle"></h3>
+                                <p class="foodcarddescription"></p>
+                                    <p class="foodcardprice"></p>
+                        </div>
+                </div>
+                <div class="plats">
+                    <h2 class="platstitle">PLATS</h2>
+                        <div class="foodcard">
+                            <h3 class="foodcardtitle"></h3>
+                                <p class="foodcarddescription"></p>
+                                    <p class="foodcardprice"></p>
+                        </div>
+                        <div class="foodcard">
+                            <h3 class="foodcardtitle"></h3>
+                                <p class="foodcarddescription"></p>
+                                    <p class="foodcardprice"></p>
+                        </div>
+                        <div class="foodcard">
+                            <h3 class="foodcardtitle"></h3>
+                                <p class="foodcarddescription"></p>
+                                    <p class="foodcardprice"></p>
+                        </div>
+                </div>
+                <div class="dessert">
+                    <h2 class="desserttitle">DESSERTS</h2>
+                        <div class="foodcard">
+                            <h3 class="foodcardtitle"></h3>
+                                <p class="foodcarddescription"></p>
+                                    <p class="foodcardprice"></p>
+                        </div>
+                        <div class="foodcard">
+                            <h3 class="foodcardtitle"></h3>
+                                <p class="foodcarddescription"></p>
+                                    <p class="foodcardprice"></p>
+                        </div>
+                        <div class="foodcard">
+                            <h3 class="foodcardtitle"></h3>
+                                <p class="foodcarddescription"></p>
+                                    <p class="foodcardprice"></p>
+                        </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
 			<h3>Ohmyfood</h3>
