rajout du boutton fonction commander sur pages restaurants

--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -78,6 +78,9 @@
                                     <p class="foodcardprice"></p>
                         </div>
                 </div>
+                <div class="commander">
+                    <button class="commanderbtn">Commander</button>
+                </div>
             </section>
         </main>
         <footer class="footer">
