--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -83,6 +83,10 @@
                                     <p class="foodcardprice"></p>
                         </div>
                 </div>
+                <div class="commander">
+                    <button class="commanderbtn">Commander</button>
+                </div>
+            </section>
         </main>
         <footer class="footer">
 			<h3>Ohmyfood</h3>
