implementation de tout le contenu texte diff pages

--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -14,6 +14,7 @@
 	</head>
     <body>
 		<header class="header">
+            <i class="fas fa-arrow-left"></i>
 			<h1>OHMYFOOD</h1>
 		</header>
 		<main>
@@ -27,55 +28,55 @@
                 <div class="entrées">
                     <h2 class="entréetitle">ENTRÉES</h2>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle"></h3>
-                                <p class="foodcarddescription"></p>
-                                    <p class="foodcardprice"></p>
+                            <h3 class="foodcardtitle">Tartare de poulpe acidulé</h3>
+                                <p class="foodcarddescription">Aux zestes d'orange</p>
+                                    <span class="foodcardprice">25€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle"></h3>
-                                <p class="foodcarddescription"></p>
-                                    <p class="foodcardprice"></p>
+                            <h3 class="foodcardtitle">Velouté de légumes d'antan</h3>
+                                <p class="foodcarddescription">Carotte, panais, topinambour</p>
+                                    <span class="foodcardprice">35€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle"></h3>
-                                <p class="foodcarddescription"></p>
-                                    <p class="foodcardprice"></p>
+                            <h3 class="foodcardtitle">Soupe à l'oignon</h3>
+                                <p class="foodcarddescription">Revisitée</p>
+                                    <span class="foodcardprice">20€</span>
                         </div>
                 </div>
                 <div class="plats">
                     <h2 class="platstitle">PLATS</h2>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle"></h3>
-                                <p class="foodcarddescription"></p>
-                                    <p class="foodcardprice"></p>
+                            <h3 class="foodcardtitle">Coquilles Saint-Jacques</h3>
+                                <p class="foodcarddescription">Accompagnées d'une purée de panais</p>
+                                    <span class="foodcardprice">40€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle"></h3>
-                                <p class="foodcarddescription"></p>
-                                    <p class="foodcardprice"></p>
+                            <h3 class="foodcardtitle">Magret de canard</h3>
+                                <p class="foodcarddescription">Et parmentier de pommes de terre</p>
+                                    <span class="foodcardprice">35€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle"></h3>
-                                <p class="foodcarddescription"></p>
-                                    <p class="foodcardprice"></p>
+                            <h3 class="foodcardtitle">Pigeonneau d’Ille-et-Vilaine</h3>
+                                <p class="foodcarddescription">Sur son lit de gnocchis aux légumes</p>
+                                    <span class="foodcardprice">44€</span>
                         </div>
                 </div>
                 <div class="dessert">
                     <h2 class="desserttitle">DESSERTS</h2>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle"></h3>
-                                <p class="foodcarddescription"></p>
-                                    <p class="foodcardprice"></p>
+                            <h3 class="foodcardtitle">Pétales de violettes glacés</h3>
+                                <p class="foodcarddescription">Et purée de noisettes</p>
+                                    <span class="foodcardprice">18€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle"></h3>
-                                <p class="foodcarddescription"></p>
-                                    <p class="foodcardprice"></p>
+                            <h3 class="foodcardtitle">Fondant au chocolat</h3>
+                                <p class="foodcarddescription">Revisité</p>
+                                    <span class="foodcardprice">22€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle"></h3>
-                                <p class="foodcarddescription"></p>
-                                    <p class="foodcardprice"></p>
+                            <h3 class="foodcardtitle">Millefeuille croustillant</h3>
+                                <p class="foodcarddescription">Myrtilles et pâte d’amande</p>
+                                    <span class="foodcardprice">23€</span>
                         </div>
                 </div>
                 <div class="commander">
