--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -14,6 +14,7 @@
 	</head>
     <body>
 		<header class="header">
+            <i class="fas fa-arrow-left"></i>
 			<h1>OHMYFOOD</h1>
 		</header>
 		<main>
@@ -27,55 +28,55 @@
                 <div class="entrées">
                     <h2 class="entréetitle">ENTRÉES</h2>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle"></h3>
-                                <p class="foodcarddescription"></p>
-                                    <p class="foodcardprice"></p>
+                            <h3 class="foodcardtitle">Fricassée d'escargot</h3>
+                                <p class="foodcarddescription">Au piment d'Espelette</p>
+                                    <span class="foodcardprice">25€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle"></h3>
-                                <p class="foodcarddescription"></p>
-                                    <p class="foodcardprice"></p>
+                            <h3 class="foodcardtitle">Foie gras de canard mi-cuit</h3>
+                                <p class="foodcarddescription">Et ses copeaux de truffe noire</p>
+                                    <span class="foodcardprice">35€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle"></h3>
-                                <p class="foodcarddescription"></p>
-                                    <p class="foodcardprice"></p>
+                            <h3 class="foodcardtitle">Oeuf au plat</h3>
+                                <p class="foodcarddescription">Assaisonné à la truffe sur lit de caviar</p>
+                                    <span class="foodcardprice">20€</span>
                         </div>
                 </div>
                 <div class="plats">
                     <h2 class="platstitle">PLATS</h2>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle"></h3>
-                                <p class="foodcarddescription"></p>
-                                    <p class="foodcardprice"></p>
+                            <h3 class="foodcardtitle">Filet de boeuf aux herbes</h3>
+                                <p class="foodcarddescription">Accompagné de sa ribambelle de légumes</p>
+                                    <span class="foodcardprice">40€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle"></h3>
-                                <p class="foodcarddescription"></p>
-                                    <p class="foodcardprice"></p>
+                            <h3 class="foodcardtitle">Parmentier de queue de boeuf</h3>
+                                <p class="foodcarddescription">À la truffe noire sur sa purée de panais</p>
+                                    <span class="foodcardprice">35€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle"></h3>
-                                <p class="foodcarddescription"></p>
-                                    <p class="foodcardprice"></p>
+                            <h3 class="foodcardtitle">Filet de turbot</h3>
+                                <p class="foodcarddescription">Aux agrumes</p>
+                                    <span class="foodcardprice">44€</span>
                         </div>
                 </div>
                 <div class="dessert">
                     <h2 class="desserttitle">DESSERTS</h2>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle"></h3>
-                                <p class="foodcarddescription"></p>
-                                    <p class="foodcardprice"></p>
+                            <h3 class="foodcardtitle">Paris-Brest</h3>
+                                <p class="foodcarddescription">Revisité</p>
+                                    <span class="foodcardprice">18€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle"></h3>
-                                <p class="foodcarddescription"></p>
-                                    <p class="foodcardprice"></p>
+                            <h3 class="foodcardtitle">Macaron au chocolat d'exception </h3>
+                                <p class="foodcarddescription">Et glace à la vanille de Madagascar</p>
+                                    <span class="foodcardprice">22€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle"></h3>
-                                <p class="foodcarddescription"></p>
-                                    <p class="foodcardprice"></p>
+                            <h3 class="foodcardtitle">Mousse au chocolat </h3>
+                                <p class="foodcarddescription">Au piment d'Espelette et à la truffe noire</p>
+                                    <span class="foodcardprice">23€</span>
                         </div>
                 </div>
                 <div class="commander">
