--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 		<header class="header">
-			<h1>OHMYFOOD</h1>
+			<h1 class="logo">ohmyfood</h1>
 		</header>
 		<main>
 		<!-- Section localisation-->
@@ -100,19 +100,11 @@
 						</footer>
 					</a>
 				</div>
-				<div class="container">
-					<div class="form">
-						<div class="form__group">
-							<label for="">email</label>
-							<input type="email" name="" id="">
-						</div>
-					</div>
-				</div>
 			</section>
 		</main>
 		<footer class="footer">
-			<h3>Ohmyfood</h3>
-			<ul>
+			<h3 class="logo">Ohmyfood</h3>
+			<ul class="footerlink">
 				<li class="footerlist">
 					<i class="fas fa-utensils">Proposer un restaurant</i>
 				</li>
