--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -15,7 +15,7 @@
     <body>
 		<header class="header">
             <i class="fas fa-arrow-left"></i>
-			<h1>OHMYFOOD</h1>
+			<h1 class="logo">ohmyfood</h1>
 		</header>
 		<main>
             <div class="background">
