mise en page divers elements

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 			</section>
 		<!-- Section restaurants-->
 			<section class="restaurants">
+				<h2 class="restaurantstitle">Restaurants</h2>
 				<div class="restaurantcartes">
 					<a class="carte" href="lapalettedugout.html">
 						<header class="carteheader">
@@ -56,8 +57,10 @@
 						</header>
 						<footer>
 							<h3 class="restauranttitle">La palette du goût</h3>
-								<span class="restaurantquartier">Ménilmontant</span>
-									<i class="far fa-heart"></i>
+							<div class="restaurantquartier">Ménilmontant</div>
+							<div class="favorite">
+								<i class="far fa-heart"></i>
+							</div>
 						</footer>
 					</a>
 				</div>
@@ -69,8 +72,10 @@
 						</header>
 						<footer>
 							<h3 class="restauranttitle">La note enchantée</h3>
-								<span class="restaurantquartier">Charonne</span>
+							<div class="restaurantquartier">Charonne</div>
+							<div class="favorite">
 									<i class="far fa-heart"></i>
+							</div>
 						</footer>
 					</a>
 				</div>
@@ -82,8 +87,10 @@
 						</header>
 						<footer>
 							<h3 class="restauranttitle">A la française</h3>
-								<span class="restaurantquartier">Cité rouge</span>
-									<i class="far fa-heart"></i>
+							<div class="restaurantquartier">Cité rouge</div>
+							<div class="favorite">	
+								<i class="far fa-heart"></i>
+							</div>	
 						</footer>
 					</a>
 				</div>
@@ -95,26 +102,30 @@
 						</header>
 						<footer>
 							<h3 class="restauranttitle">Le délice des sens</h3>
-								<span class="restaurantquartier">Folie Méricourt</span>
-									<i class="far fa-heart"></i>
+							<div class="restaurantquartier">Folie Méricourt</div>
+							<div class="favorite">
+								<i class="far fa-heart"></i>
+							</div>
 						</footer>
 					</a>
 				</div>
 			</section>
 		</main>
 		<footer class="footer">
-			<h3 class="logo">Ohmyfood</h3>
-			<ul class="footerlink">
-				<li class="footerlist">
-					<i class="fas fa-utensils">Proposer un restaurant</i>
-				</li>
-				<li class="footerlist">
-					<i class="fas fa-hands-helping">Devenir partenaire</i>
-				</li>
-				<li class="footerlist">Mentions légales
-				</li>
-				<li class="footerlist">Contact
-				</li>
-			</ul>
+			<div class="footercontent">
+				<h3 class="logo">Ohmyfood</h3>
+				<ul class="footerlink">
+					<li class="footerlist">
+						<i class="fas fa-utensils">Proposer un restaurant</i>
+					</li>
+					<li class="footerlist">
+						<i class="fas fa-hands-helping">Devenir partenaire</i>
+					</li>
+					<li class="footerlist">Mentions légales
+					</li>
+					<li class="footerlist">Contact
+					</li>
+				</ul>
+			</div>
 		</footer>
     </body>
