--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -22,7 +22,8 @@
                 <img class="backgroundpicture" src="Maquettes Ohmyfood/images/restaurants/lapalettedugout.jpg">
             </div>
             <section class="menu">
-                <header class="menuheader">La palette du goût
+                <header class="menuheader">
+                    <div class="menutitle">La palette du goût</div>
                     <i class="far fa-heart"></i>
                 </header>
                 <div class="entrées">
@@ -85,18 +86,20 @@
             </section>
         </main>
         <footer class="footer">
-			<h3>Ohmyfood</h3>
-			<ul>
-				<li class="footerlist">
-					<i class="fas fa-utensils">Proposer un restaurant</i>
-				</li>
-				<li class="footerlist">
-					<i class="fas fa-hands-helping">Devenir partenaire</i>
-				</li>
-				<li class="footerlist">Mentions légales
-				</li>
-				<li class="footerlist">Contact
-				</li>
-			</ul>
+			<div class="footercontent">
+				<h3 class="logo">Ohmyfood</h3>
+				<ul class="footerlink">
+					<li class="footerlist">
+						<i class="fas fa-utensils">Proposer un restaurant</i>
+					</li>
+					<li class="footerlist">
+						<i class="fas fa-hands-helping">Devenir partenaire</i>
+					</li>
+					<li class="footerlist">Mentions légales
+					</li>
+					<li class="footerlist">Contact
+					</li>
+				</ul>
+			</div>
 		</footer>
     </body>
